--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-### Intellij ###
+### IntelliJ ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
@@ -30,8 +30,7 @@
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
-# since they will be recreated, and may cause churn.  Uncomment if using
-# auto-import.
+# since they will be recreated, and may cause churn. Uncomment if using auto-import.
 # .idea/artifacts
 # .idea/compiler.xml
 # .idea/jarRepositories.xml
@@ -51,5 +50,38 @@ cmake-build-*/
 *.iws
 out/
 
+### Gradle ###
+.gradle/
+build/
+!gradle/wrapper/gradle-wrapper.jar
+
+### Environment files ###
 .env
-.gradle
+*.env
+.env.*
+
+### Logs ###
+*.log
+logs/
+spring.log
+
+### OS / Editor ###
+.DS_Store
+Thumbs.db
+
+### Temporary / Cache ###
+tmp/
+.cache/
+.vscode/
+
+### Other common build outputs ###
+bin/
+target/
+*.class
+*.jar
+*.war
+*.ear
+
+### QGIS or local config (optional) ###
+config/style/
+
