chore: JPA를 위한 entity 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,7 @@ spring:
     job:
       enabled: false
 
+
 management:
   endpoints:
     web:
@@ -26,3 +27,8 @@ management:
     defaults:
       enabled: true
 
+naver:
+  api:
+    client-id: ${NAVER_CLIENT_ID}
+    client-secret: ${NAVER_CLIENT_SECRET}
+    base-url: https://openapi.naver.com/v1/search/news.json
