--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'de.codecentric:spring-boot-admin-starter-client:3.4.5'
 
+    // .env load
+    implementation "me.paulschwarz:spring-dotenv:4.0.0"
+    
 }
 
 tasks.named('test') {
