chore(NaverApiProperties.java): record -> class 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,3 +32,7 @@ naver:
     client-id: ${NAVER_CLIENT_ID}
     client-secret: ${NAVER_CLIENT_SECRET}
     base-url: https://openapi.naver.com/v1/search/news.json
+
+hankyung:
+  api:
+    base-url: https://news.hankyung.com/feed
