--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    mapstructVersion = '1.6.2'
+    lombokMapstructBinding = '0.2.0'
+}
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-batch'
@@ -26,14 +30,11 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.batch:spring-batch-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-    compileOnly 'org.projectlombok:lombok'
-
 
     // QueryDSL JPA
     implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
 
     // QueryDSL Annotation Processor
-    annotationProcessor 'org.projectlombok:lombok'
     annotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'
     annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
     annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
@@ -44,7 +45,16 @@ dependencies {
 
     // .env load
     implementation "me.paulschwarz:spring-dotenv:4.0.0"
-    
+
+    // mapstruct
+    implementation "org.mapstruct:mapstruct:${mapstructVersion}"
+    annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"
+    annotationProcessor "org.projectlombok:lombok"
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBinding}"
+
+    // xml 파싱
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
 }
 
 tasks.named('test') {
