chore: update configuration files and adjust `.gitignore`
- Rename Naver API environment variable keys for consistency.
- Remove unused logging levels from `application-local.yml`.
- Ignore `logs` directory and `src/main/resources/.env` in `.gitignore`.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 .idea/**/dictionaries
 .idea/**/shelf
 
+logs
+
 # AWS User-specific
 .idea/**/aws.xml
 
@@ -56,7 +58,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 
 ### Environment files ###
-.env
+src/main/resources/.env
 *.env
 .env.*
 
