feat(application.yml): add configuration for Chosun RSS feed API

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,3 +35,7 @@ naver:
 hankyung:
   api:
     base-url: https://www.hankyung.com/feed
+
+chosun:
+  api:
+    base-url: https://www.chosun.com/arc/outboundfeeds/rss/category
