--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,15 +32,21 @@ article:
       client-id: ${NAVER_API_CLIENT_ID}
       client-secret: ${NAVER_API_CLIENT_SECRET}
       base-url: https://openapi.naver.com/v1/search/news.json
-
   hankyung:
     api:
       base-url: https://www.hankyung.com/feed
-
   chosun:
     api:
       base-url: https://www.chosun.com/arc/outboundfeeds/rss/category
-
   yonhap:
     api:
       base-url: https://www.yonhapnewstv.co.kr/category/news
+
+aws:
+  accessKeyId: ${AWS_S3_ACCESS_KEY}
+  secretKey: ${AWS_S3_SECRET_KEY}
+  region: ${AWS_S3_REGION}
+  bucket: ${AWS_S3_BUCKET}
+
+storage:
+  type: s3
