--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -30,3 +30,10 @@ naver:
     client_secret: ${NAVER_API_CLIENT_SECRET}
     url: https://openapi.naver.com/v1/search/news.json
 
+aws:
+  s3:
+    enabled: true
+  accessKeyId: ${AWS_S3_ACCESS_KEY}
+  secretKey: ${AWS_S3_SECRET_KEY}
+  region: ${AWS_S3_REGION}
+  bucket: ${AWS_S3_BUCKET}
