feat(Scheduler): update job schedules and revive management config
- Change job schedules in `ArticleJobScheduler` to 50-minute intervals.
- Replace `@PostConstruct` with `@Scheduled` annotations for all jobs.
- Restore and adjust `management` configuration in `application.yml`.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,21 +11,6 @@ spring:
     job:
       enabled: false
 
-management:
-  endpoints:
-    web:
-      exposure:
-        include: health,info,metrics,batch,scheduledtasks
-      base-path: /actuator
-  endpoint:
-    health:
-      show-details: always
-    batch:
-      enabled: true
-  health:
-    defaults:
-      enabled: true
-
 article:
   naver:
     api:
@@ -50,3 +35,18 @@ aws:
 
 storage:
   type: s3
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+      base-path: /actuator
+  endpoint:
+    health:
+      show-details: always
+    batch:
+      enabled: true
+  health:
+    defaults:
+      enabled: true
