--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,15 +1,14 @@
 spring:
 
-  #  boot:
-  #    admin:
-  #      client:
-  #        url: http://localhost:9090
-  #        enabled: true
-  #        instance:
-  #          name: monew_batch
-  #          service-url: http://localhost:8082
-  #          management-base-url: http://localhost:8082
-
+  boot:
+    admin:
+      client:
+        url: http://localhost:9090
+        enabled: true
+        instance:
+          name: monew_batch
+          service-url: http://localhost:8082
+          management-base-url: http://localhost:8082
   batch:
     job:
       enabled: false
