feat(Config): enhance metrics export and adjust local admin client settings
- Add metrics export configuration to `application.yml` with tags and step interval.
- Update `application-local.yml` to include admin client period setting.

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,5 +1,4 @@
 spring:
-
   boot:
     admin:
       client:
@@ -9,6 +8,7 @@ spring:
           name: monew_batch
           service-url: http://localhost:8082
           management-base-url: http://localhost:8082
+      period: 1s
   batch:
     job:
       enabled: false
