--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,3 +50,9 @@ management:
   health:
     defaults:
       enabled: true
+  metrics:
+    export:
+      simple:
+        step: 10s
+    tags:
+      application: ${spring.application.name}
